# leviosam2

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  INSTALL.md  LICENSE  Makefile  README.md  bam_md.c  chain.cpp  chain.hpp  invert.py  leviosam-test.py  leviosam.cpp  leviosam.hpp  leviosam_test.cpp  leviosam_utils.cpp  leviosam_utils.hpp  liftover.cpp  liftover.hpp  liftover_test.cpp  updates.md
.github/workflows/: cmake.yml  cmake_htslib.yml  cmake_htslib_v1.11.yml  cmake_htslib_v1.12.yml  cmake_htslib_v1.13.yml  cmake_htslib_v1.14.yml  cmake_htslib_v1.15.yml  cmake_htslib_v1.16.yml  codeql.yml  integration-test.yml  workflow-test.yml
configs/: bowtie2.yaml  default.yaml  ont.yaml  ont_all.yaml  pacbio.yaml  pacbio_all.yaml
docker/: Dockerfile  update_docker.sh
docker/env/: Dockerfile
docker/production/: Dockerfile
pipeline/: README.md  gen_genomic_annotations.sh  leviosam2.sh
resources/: GRCh38.chrom_map
scripts/: chain_change_sides.py  chain_invert.py  chain_utils.py  collect_perf.py  compare_fastq.py  compare_sam-test.py  compare_sam.py  extract_seq_from_bed.py  extract_unpaired_reads.py  fai_to_bed.py  filter_bed_by_size.py  gen_length_map.py  get_low_identity_regions.py  get_mappable_regions.py  leviosam_utils-test.py  leviosam_utils.py  mask_fasta_with_bed.py  sam_qname_to_bed.py  sample_fq.py  stratify_aln.py  summarize_aln_features.py  vcf2chain.sh  vcf_to_bed.sh  verbosify_chain.py
scripts/testdata/: chr1_1_100000.fa  chr1_test1.bed  mask_fasta_with_bed-chr1_test1.fa.results
selective_liftover/: README.md  gen_lowmap_annotation.sh  gen_lowmap_annotation_prev.sh  gen_unliftable_annotations.sh  leviosam_illumina.sh  leviosam_longreads.sh  leviosam_refflow.sh  leviosam_refflow_mappability.sh  leviosam_shortreads_pe.sh
src/: IITree.h  aln.cpp  aln.hpp  bam_aux.c  bed.cpp  bed.hpp  bed_test.cpp  chain.cpp  chain.hpp  chain_test.cpp  cherry_pick.cpp  cherry_pick.hpp  cigar.cpp  cigar.hpp  cigar_test.cpp  collate.cpp  collate.hpp  extract_unpaired.cpp  ksw2.h  ksw2_extd2_sse.c  ksw2_extz.c  ksw2_extz2_sse.c  leviosam.cpp  leviosam.hpp  leviosam_test.cpp  leviosam_utils.cpp  leviosam_utils.hpp  leviosam_utils_test.cpp  lift_bed.cpp  lift_bed.hpp  rapidyaml.hpp  reconcile.cpp  reconcile.hpp  reconcile_test.cpp  version.hpp  yaml.cpp  yaml.hpp
testdata/: HG002-0.3x-bwa-grch37-chr1_rev.sam  HG002-0.3x-bwa-grch38-chr1_rev.sam  bt2-paired_end-grch37.bam  bt2-paired_end-grch37.sam  bt2-paired_end-grch38.bam  bt2-paired_end-grch38.sam  bt2-paired_end-major.bam  bt2-paired_end-major.sam  bt2-pe-chm13_v1.1_hg2y.bam  bt2-pe-grch38.bam  bt2-pe-major.bam  bt2-se-chm13_v1.1_hg2y.bam  bt2-se-grch38.bam  bt2-se-major.bam  bt2-single_end-cigar_op-grch38.bam  bt2-single_end-cigar_op-grch38.sam  bt2-single_end-cigar_op-major.bam  bt2-single_end-cigar_op-major.sam  bwa-paired_end-grch38.bam  bwa-paired_end-grch38.sam  bwa-paired_end-major.bam  bwa-paired_end-major.sam  bwa-pe-chm13_v1.1_hg2y.bam  bwa-pe-grch38.bam  bwa-pe-major.bam  bwa-se-chm13_v1.1_hg2y.bam  bwa-se-grch38.bam  bwa-se-major.bam  bwa-single_end-cigar_op-grch38.bam  bwa-single_end-cigar_op-grch38.sam  bwa-single_end-cigar_op-major.bam  bwa-single_end-cigar_op-major.sam  chain_cigar.sam  chr1_reversed_region.chain  del_in_indel_example.sam  hg19.fa.fai  hg38_to_hg19-chr1_100216456_104974084.chain  mm2-test1.sam  mm2-test2.sam  overlapping_example-lifted-gold.bam  (+14 more)
testdata/raw_reads/: paired_end_1.fq  paired_end_2.fq  single_end-cigar_op.fastq
tutorials/: align_with_alt_reference.md
workflow/: README.md  gen_genomic_annotations.sh  leviosam2.py  leviosam2.sh  workflow-test.py
